[project]
name = "swift-bus"
version = "0.1.0"
description = "Real-time bus location and broadcast app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garden>=1.0.0b1",
    "kivy>=2.3.1",
    "kivy-garden>=0.1.5",
    "mapview>=1.0.6",
    "plyer>=2.1.0",
    "requests>=2.31.0",
    "flask>=3.0.0"

]
